2010-01-01  Dirk Bergstrom  <krid@otisbean.com>

Closes gh-1: Can't delete first item on item-list
    * stylesheets/keyring.css (#status): Change float: left to text-align: left.

Closes gh-3: Import from clipboard borken
    * app/assistants/actions-assistant.js (ImportExportDialogAssistant.setup):
    Make the 'data' input accept & display multi-line text.
    
    * app/views/actions/import-export-dialog.html: Add an id to the data
    input div, so we can control its size.    

    * stylesheets/keyring.css (#import-data-div): Add max-height to input div,
    now expands to ~3 lines of text before scrolling.

2009-12-20  Dirk Bergstrom  <krid@otisbean.com>

    * app/assistants/categories-assistant.js (setup): Set initial focus to
    null.

    * app/models/ring.js (getItem): Remove encrypted stuff from item before
    passing it on.  Fixes incredibly stupid bug.
    (noteItemView): Only re-sort if currently sorting by viewed.  If so,
    set itemsReSorted, so the UI notices the change.

2009-12-19  Dirk Bergstrom  <krid@otisbean.com>

    * app/assistants/actions-assistant.js: Add button, dialog class and
    associated methods to support "change password".
    
    * app/assistants/app-assistant.js: Add "Edit Categories..." to app menu.
    
    * app/assistants/categories-assistant.js: Handle adding, deleting and
    editing categories.
    
    * app/assistants/item-assistant.js (init): Use lists of fields from ring to
    build this.fields.
    (setup): Use ring.emptyItem() when creating.  Add plumbing for
    "show empty fields", including command menu munging.  Add category support.
    Clean up field setup code.
    (timeoutOrDeactivate): Skip category.
    (handleCommand): Support "show empty fields".
    
    * app/assistants/item-list-assistant.js (init): Move global definitions here.
    (setup): Add category to command menu.  Declare fixedHeightItems in list.
    Save a reference to the list widget.  Set a status line.